# seisbench

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  deploy_models_on_streams_example.ipynb  geofon-new-output.txt  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: main_push.yml  main_push_windows_mac.yml  publish-to-pypi.yml  pull_request.yml  test_push.yml
contrib/: README.md  benchmark_dataset.py  benchmark_model_annotate.py  cred_conversion.ipynb  eqtransformer_conversion.ipynb  gpd_conversion.ipynb  test_transcode_dataset.py  transcode_dataset.py
contrib/eqcct/: original.json
contrib/eqccts/: original.json
contrib/model_conversion/: README.md  cred_conversion.ipynb  deepdenoiser_conversion.ipynb  eqtransformer_conservative_conversion.ipynb  eqtransformer_model2_conversion.ipynb  eqtransformer_original_conversion.ipynb  gpd_conversion.ipynb  phasenet_conversion.ipynb  skynet_seisbench_integration.ipynb
doc/: csv.md  metadata.md
doc/NEIC-Benchmark-Dataset/: description.md
docs/: conf.py  index.rst  requirements.txt
docs/_ext/: optional_argument_helper.py
docs/_templates/: layout.html
docs/pages/: benchmark_datasets.rst  contributing.rst  data_format.rst  dataset_inspection.rst  datasets.rst  documentation.rst  examples.rst  extending.rst  installation_and_usage.rst  models.rst  overview.rst  referencing.rst
examples/: 01a_dataset_basics.ipynb  01a_dataset_basisc.ipynb  01b_model_api.ipynb  01c_generator_pipelines.ipynb  01d_deploy_model_on_streams_example.ipynb  02_training_phasenet.ipynb  02a_deploy_model_on_streams_example.ipynb  02b_deep_denoiser.ipynb  02c_depth_phases.ipynb  02d_training_denoiser.ipynb  03a_training_phasenet.ipynb  03b_creating_a_dataset.ipynb  03c_catalog_seisbench_gamma.ipynb  03d_catalog_seisbench_pyocto.ipynb  03d_seisbench_pyocto.ipynb  03e_training_denoiser.ipynb  03f_training_dkpn.ipynb  04a_das_models.ipynb  04b_training_deepsubdas.ipynb  README.md  data_generator_example.ipynb  dataset_example.ipynb  deploy_model_on_streams_example.ipynb  generator_pipelines.ipynb  gpd_model_example.ipynb  model_example.ipynb  region_filtering_example.ipynb  test_obs_pickblue.ipynb  training_phasenet.ipynb
examples/legacy/: README.md  model_example.ipynb  region_filtering_example.ipynb
requirements/: req_common.txt  req_dependent.txt
seisbench/: __init__.py  data.py
seisbench/data/: CREW.py  Untitled.ipynb  __init__.py  aq2009.py  base.py  bohemia.py  ceed.py  crew.py  cwa.py  das_base.py  dummy.py  eqsdenoiser.py  esm.py  ethz.py  geofon.py  induced.py  inspection.py  instance.py  iquique.py  isc_ehb.py  lendb.py  lfe_stacks.py  mlsubdas.py  ncedc.py  neic.py  obs.py  obst2024.py  pisdl.py  pnw.py  scedc.py  spectra_base.py  stead.py  txed.py  vcseis.py
seisbench/ext/: __init__.py  stack_windows.c  stack_windows.pyi  utils.c  utils.pyi
seisbench/generate/: __init__.py  augmentation.py  das_labeling.py  das_windowing.py  generator.py  labeling.py  time_frequency.py  windows.py
seisbench/models/: __init__.py  aepicker.py  base.py  cred.py  das_base.py  das_wrapper.py  deepdenoiser.py  deepsubdas.py  depthphase.py  dkpn.py  dpp.py  eqcct.py  eqtp.py  eqtransformer.py  gpd.py  lfe_detect.py  load_save_models.ipynb  obstransformer.py  phasenet.py  pickblue.py  seisdae.py  skynet.py  team.py  torch_version_phasenet.py  utils.py
seisbench/util/: __init__.py  annotations.py  arraytools.py  auxiliary.py  decorators.py  dkpn_shared.py  file.py  generate.py  ml.py  region.py  torch_helpers.py  trace_ops.py
tests/: conftest.py  test_arrange_blocks.py  test_component_mapping_fix.py  test_data.py  test_ext_utils.py  test_generate.py  test_models.py  test_util.py
tests/data/: test_das_base_data.py  test_spectrum_base_data.py
tests/examples/: OBS1.IQ.HHE..D.2016.185.225026  OBS1.IQ.HHH..D.2016.185.225026  OBS1.IQ.HHN..D.2016.185.225026  OBS1.IQ.HHZ..D.2016.185.225026
tests/generate/: test_das_labeling.py  (+1 more)
(+44 files in other folders)
